--- a/Week1-tasks/Authentication system/Views/signUp.ejs
+++ b/Week1-tasks/Authentication system/Views/signUp.ejs
@@ -1,13 +1,11 @@
 <%- include('layout/header') %>
-
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h2>Web Form</h2>
             <div class="conatiner">
                 <div class="row">
-                    <div class="col-lg-12 mx-auto mt-4">
-                        <div class="card shadow">
+                    <div class="col-lg-4 mx-auto mt-4">
+                        <div class="card shadow form">
                             <div class="card-body p-4">
                                 <form method="post" >
                                     <div class="mb-3">
@@ -24,10 +22,10 @@
                                       </div>
                                       <div class="mb-3">
                                         <label for="Password" class="form-label">Password:</label>
-                                        <input type="password" class="form-control" id="password" placeholder="Enter your password" name="password" required>
+                                        <input type="password" class="form-control" id="password" placeholder="Create wpassword" name="password" required>
                                       </div>
                                     <button type="submit" class="btn btn-primary">Register</button><br> <br>
-                                      <h6>Already have an account <a href="/login">Login</a></h6>
+                                      <h6>Already have an account? <a href="/login">Login</a></h6>
                                   </form>
                             </div>
                         </div>
