--- a/Week1-tasks/Authentication system/Views/Layout/header.ejs
+++ b/Week1-tasks/Authentication system/Views/Layout/header.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <title><%=title%></title>
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
@@ -18,18 +19,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+              <% if(user) {%>
+                <li class="nav-item">
+                  <a class="nav-link" href="/profile">Welcome <%=user.name%></a>
+                </li>
+                
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                <a class="nav-link" href="/logout">Logout</a>
               </li>
+              <%} else {%>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Singup</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Profile</a>
+                <a class="nav-link active" aria-current="page" href="/login">Login</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-              </li>
+              <%} %>
             </ul>
           </div>
         </div>
