--- a/Week1-tasks/Authentication system/Views/login.ejs
+++ b/Week1-tasks/Authentication system/Views/login.ejs
@@ -1,12 +1,11 @@
 <%- include('layout/header') %>
-<div class="container">
+<div class="login container">
     <div class="row">
         <div class="col-sm-12">
-            <h2>Web Form</h2>
             <div class="conatiner">
                 <div class="row">
-                    <div class="col-lg-12 mx-auto mt-4">
-                        <div class="card shadow">
+                    <div class="col-lg-4 mx-auto mt-4">
+                        <div class="card shadow form">
                             <div class="card-body p-4">
                                 <form method="post">
                                     <div class="mb-3">
