--- a/Week1-tasks/Authentication system/Views/profile.ejs
+++ b/Week1-tasks/Authentication system/Views/profile.ejs
@@ -1,4 +1,5 @@
 <%- include('layout/header') %>
-<h2>Profile</h2>
-<h6>Welcome <%=username%></h6>
+
+<img class="profile" src="/tech3.jpg"alt="">
+
 <%- include('layout/footer') %>
